tests/ui/sync/reentrantlockguard-sync.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
  --> $DIR/reentrantlockguard-sync.rs:13:15
   |
LL |     test_sync(guard);
   |     --------- ^^^^^ `Cell<i32>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `Cell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` or `std::sync::atomic::AtomicI32` instead
   = note: required for `ReentrantLockGuard<'_, Cell<i32>>` to implement `Sync`
note: required by a bound in `test_sync`
  --> $DIR/reentrantlockguard-sync.rs:7:17
   |
LL | fn test_sync<T: Sync>(_t: T) {}
   |                 ^^^^ required by this bound in `test_sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
